--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
 	width: 100%;
-    height: 400px;
+    height: 100%;
     /*background-image: url('https://github.com/duan14/image-library/blob/image-upload/Layout_1.png?raw=true');*/
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,20 +14,41 @@ div.popup {
 	box-shadow:10px 10px 30px 0px rgba(0,0,0,0.20), 0px 0px 0px 7px rgba(0,0,0,0.05);
 	border-radius:5px;
 	width:599px;
-	height:409px;	
+	height:429px;	
 }
+
 
 .portrait{
 	background-image: url("https://github.com/duan14/image-library/blob/image-upload/BE0A9CD0-AB0C-4847-845C-C275DB970DA3@3x.png?raw=true"); 
 	background-size:contain;
 	position:absolute;
-	margin-top: 50px;
-	border:1px solid #cccccc;
+	margin-top: 95px;
+    margin-left: 30px;
 	border-radius:100px;
 	width:88px;
 	height:88px;
-	z-index:3
+	z-index:3;
 }
+
+.circle{
+	margin-top: 95px;
+    margin-left: 5px;
+}
+
+.call_icon{
+	background-image: url("https://github.com/duan14/image-library/blob/image-upload/green%20phone%20icon.png?raw=true");
+	background-size:contain;
+	position:absolute;
+	margin-top: 170px;
+    margin-left: 43px;
+	background-repeat: no-repeat;
+	width:62px;
+	height:103px;
+	z-index:2;
+	
+}
+
+/***top portion css START***/
 
 div.top{
 	position:absolute;
@@ -35,22 +56,172 @@ div.top{
 	background:#f9f9f9;
 	width:599px;
 	height:141px;
+	border-top-right-radius:5px;
+	border-top-left-radius:5px;
 	z-index:2;
 }
 
+.t_row1{
+	margin:9px 11px 0px 11px;
+}
+
+.logo img{
+width:54px; 
+height:10px; 
+float:left;
+}
+.close_icon{
+	margin-left:500px;
+}
+
+.t_row2{
+	margin:-2px 30px 5px 30px;
+}
+
+.history{
+	width:93px;
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:200;
+	font-size:14px;
+	color:#666666;
+	float: left;
+	margin-left:8px;
+}
+
+.in_out_call{
+margin-left:50px;
+}
+
+.in_call{
+	background:#00d95a;
+	border-radius:4px;
+	width:59px;
+	height:20px;
+	vertical-align:center;
+	float:right;
+	padding-top:2px;
+}
+
+.call_text{
+	font-family:HelveticaNeue-Bold;
+	font-size:14px;
+	color:#ffffff;
+	letter-spacing:0px;
+	text-align:center;
+}
+
+.out_call {
+	background:#cccccc;
+	border-radius:4px;
+	width:127px;
+	height:20px;
+	padding-top:2px;	
+}
+
+.time {
+	margin-left:7px;
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:200;
+	font-size:42px;
+	color:#666666;
+	letter-spacing:-1.75px;
+	line-height:32px;
+	text-align:right;
+}
+
+.phone_icon img{
+	margin-left:8px;
+	width:40px;
+	height:40px;
+	border-radius:100%;
+}
+
+
+.green_dot{
+	width:155px;
+}
+
+.green_dot img{
+	width:10px;
+	height:10px;
+	float:right;
+}
+
+.name{
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:200;
+	font-size:22px;
+	color:#666666;
+	text-align:left;
+	width: 172px;
+	height:34px;
+	margin-left:5px;
+}
+
+.phone_number{
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:200;
+	font-size:22px;
+	color:#00a1e0;
+	text-align:right;
+	float: right;
+	margin-left: 70px;
+	text-decoration:underline;
+}
+/***top portion css END***/
+
+
+/***middle portion css START***/
+
 div.middle{
 	position:absolute;
-	margin-top: -370px;
-	margin-left: 102px;
+	margin-top: 141px;
 	width:599px;
-	height:140px;
+	height:160px;
+}
+
+.m_row1{
+	margin-top:10px;
+}
+
+.menu_icon img{
+	margin-left: 145px;
+    width: 8px;
+    height: 8px;
+    margin-top: -19px;
+}
+
+
+.detail{
+	margin-left: 5px;
+    margin-top: -5px;
+}
+
+.title{
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:300;
+	font-size:14px;
+	color:#666666;
+	text-align:left;
+}
+
+.social{
+	font-family: 'Titillium Web', sans-serif;
+	font-weight:300;
+	font-size:14px;
+	color:#AAAAAA;
+	text-align:left;
+}
+
+.social_udline{
+	text-decoration:underline;
 }
 
 
 div.more{
 	position:absolute;
-	margin-top:-245px;
-    margin-left:263px;
+	margin-top: 285px ;
+	margin-left:161px;
 	text-align:center;
 	background:#ebeff2;
 	border-radius:100px;
@@ -72,11 +243,12 @@ div.more{
 
 div.bottom{
 	position:absolute;
-	margin-top:-229px;
-    margin-left:102px;
+	margin-top:301px;
 	background:#ebeff2;
 	width:599px;
 	height:128px;
+	border-bottom-right-radius:5px;
+	border-bottom-left-radius:5px;
 	z-index:1;
 }
 
@@ -97,7 +269,7 @@ div.bottom{
 	margin-top:15px;
 	margin-left:30px;
 	width:424px;
-	font-family:TitilliumWeb-Light;
+	font-family: 'Titillium Web', sans-serif;
 	font-size:14px;
 	color:#666666;
 	line-height:22px;
