--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;
+	width: 100%;
     height: 100%;
     background-image: url('https://github.com/duan14/image-library/blob/image-upload/Layout_1.png?raw=true');
     background-repeat: no-repeat;
@@ -9,7 +9,8 @@ body {
 
 div.popup {
 	
-	margin:50%;
+	margin-top:15%;
+	margin-left:30%;
 	background:#ffffff;
 	box-shadow:10px 10px 30px 0px rgba(0,0,0,0.20), 0px 0px 0px 7px rgba(0,0,0,0.05);
 	border-radius:5px;
