--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;
+	width: 100%;
     height: 100%;
     background-image: url('https://github.com/duan14/image-library/blob/image-upload/Layout_1.png?raw=true');
     background-repeat: no-repeat;
@@ -242,6 +242,11 @@ div.middle{
 	height:6px;
 }
 
+.dropbtn{
+	border: 0; 
+	background: transparent;
+}
+
 .lower_out_call{
 	margin-left:125px;
 	background:#cccccc;
@@ -268,6 +273,7 @@ div.middle{
 	color:#666666;
 	text-align:left;
 	margin-left:-108px;
+	width:72px;
 }
 
 .calendar_icon img{
