--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ function checkTime(i) {
                 <tr>
                 	<td>
                     <div class="note_detail blue_udline">
-                    	<span id="p2"><a class="blue_udline" href="https://www.google.com" target="_blank">3 Notes</a></span>
+                    	<span id="p2"><a class="blue_udline" href="http://www.kaiyaoduan.com" target="_blank">3 Notes</a></span>
                     </div>
                     </td>
                 </div>
