--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 body {
-    width: 100%;
+	width: 100%;
     height: 100%;
     background-image: url('https://github.com/duan14/image-library/blob/image-upload/Layout_1.png?raw=true');
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 div.popup {
+	
 	margin-top:15%;
 	margin-left:30%;
 	background:#ffffff;
@@ -18,6 +20,7 @@ div.popup {
 
 
 .portrait img{
+	
 	background-size:contain;
 	position:absolute;
 	margin-top: 95px;
@@ -30,7 +33,7 @@ div.popup {
 
 .circle{
 	margin-top: 95px;
-	 margin-left: 5px;
+    margin-left: 5px;
 }
 
 .call_icon img{
@@ -38,7 +41,7 @@ div.popup {
 	background-size:contain;
 	position:absolute;
 	margin-top: 170px;
-	 margin-left: 43px;
+    margin-left: 43px;
 	background-repeat: no-repeat;
 	width:62px;
 	height:103px;
@@ -64,11 +67,10 @@ div.top{
 }
 
 .logo img{
-	width:54px; 
-	height:10px; 
-	float:left;
+width:54px; 
+height:10px; 
+float:left;
 }
-
 .close_icon{
 	margin-left:500px;
 }
@@ -85,6 +87,8 @@ div.top{
 	color:#666666;
 	float: left;
 	margin-left:8px;
+	text-decoration:none;
+	z-index:4;
 }
 
 .in_out_call{
@@ -186,15 +190,15 @@ div.middle{
 
 .menu_icon img{
 	margin-left: 145px;
-	    width: 8px;
-	    height: 8px;
-	    margin-top: -19px;
+    width: 8px;
+    height: 8px;
+    margin-top: -19px;
 }
 
 
 .detail{
 	margin-left: 5px;
-	 margin-top: -5px;
+    margin-top: -5px;
 }
 
 .title{
@@ -229,6 +233,7 @@ div.middle{
 	font-size:14px;
 	color:#666666;
 	text-align:left;	
+	z-index:4;
 }
 
 .drop_down{
